# learning

./: .gitignore
c/lecture-1/: Makefile  main.c
c/lecture-2/: README.md  main  main.c  slicing.c  slicing.h
c/lecture-3/c/: main.c
chatgpt/: why.md
clojure/day1/: day1.clj
clojure/day1/.lsp/.cache/: db.transit.json
clojure/day1/day1/: calc.clj  crud.clj  day1.clj
clojure/day1/psql-demo/: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  project.clj
clojure/day1/psql-demo/doc/: intro.md
clojure/day1/psql-demo/src/psql_demo/: core.clj
clojure/day1/psql-demo/test/psql_demo/: core_test.clj
go/concurrency/revisit/: concurrency.db  go.mod  main.go
ocaml/: in_memory_crud.ml
ocaml/in_memory_crud/: dune-project  in_memory_crud.opam
ocaml/in_memory_crud/lib/: dune  my_first_module.ml  my_first_module.mli
ocaml/in_memory_crud/lib/email/: email.ml  email.mli
ocaml/in_memory_crud/test/: dune
ossu/core-cs/systematic_programming_design/edx/drracket/: htdf.rkt  main.rkt  second.rkt
ossu/core-cs/systematic_programming_design/how_to_design_programs_book/: recipe.md
ossu/intro-cs/: README.md
ossu/intro-cs/introduction-to-computer-science-and-programming-using-python/lecture-1/: lecture-1.md  lecture-1.py
ossu/intro-cs/introduction-to-computer-science-and-programming-using-python/lecture-3/OCaml/: main.ml
ossu/intro-cs/part-1/lecture-10/: main  main.c
ossu/intro-cs/part-1/lecture-12/: main.go
ossu/intro-cs/part-1/lecture-15 (Recursion)/: main.c
ossu/intro-cs/part-1/lecture-4/c/: main.c
ossu/intro-cs/part-1/lecture-6/: README.md
(+32 files in other folders)
